--- a/public/spjain.css
+++ b/public/spjain.css
@@ -1038,7 +1038,7 @@ figcaption {
 }
 
 .slide-1 {
-  background-image: url('../003_PRMEMICROSITEBanner_001_F.jpg');
+  background-image: url('../home1.jpg');
   background-position: 50% 35%;
   background-size: contain;
 }
@@ -1063,7 +1063,7 @@ figcaption {
 }
 
 .slide-5 {
-  background-image: url('../003_PRMEMICROSITEBanner_001_F2.jpg');
+  background-image: url('../home2.jpg');
   background-position: 50% 50%;
   background-size: contain;
   
