--- a/public/webflow.css
+++ b/public/webflow.css
@@ -924,6 +924,13 @@ textarea.w-select {
   display: none !important;
   -webkit-appearance: none;
 }
+
+@media only screen and (max-width: 1280px) {
+    .w-slider {
+        height: 438px !important;
+    }
+}
+
 .w-slider {
   position: relative;
   height: 500px;
@@ -1045,6 +1052,7 @@ textarea.w-select {
   margin: auto;
   width: 1em;
   height: 1em;
+  opacity: 0.5;
 }
 .w-dropdown {
   display: inline-block;
