--- a/app/views/home/details.html.erb
+++ b/app/views/home/details.html.erb
@@ -17,44 +17,128 @@
 <%end%> 
 
 <div>
-      <div class="heading-tittle color-black w-container" style="margin-top: 0px;">
-        <h2 class="" style="margin: 30px 0px 30px 0px"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">Colloquium Details</p></h2>
+    <div class="heading-tittle color-black w-container" style="margin-top: 0px;">
+      <h2 class="" style="margin: 30px 0px 30px 0px"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">Colloquium Details</p></h2>
     </div>
     <div>
-          <h6 class="heading-2" style="font-family: 'Roboto Condensed', sans-serif;">
-          	The half day Doctoral Colloquium will give opportunity to PhD/FPM students to present 
-          	 their research to other students and experts in the field. This will be held on 
-          	     December 12th, 2018. 
-          	</h6>
-          </div>
-          <div class="row-3" style="margin-top: 20px;">
-            <div class="column-6 w-col w-col-6">
-               <div class="card-track" style="padding: 10px;">
-                <div class="row-12 w-row">
-                
-            <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif; text-transform: uppercase;">PhD colloquium for doctoral candidates</h4>
-            <li style="padding-left: 10px;">
-              The Colloquium committee will select approximately 25 participants who will be expected to participate in peer-review exercises, give short, informal presentations of their work during the Colloquium, and follow it up with extensive group discussion.
+      <h6 class="heading-2" style="font-family: 'Roboto Condensed', sans-serif;">
+    	The half day Doctoral Colloquium will give opportunity to PhD/FPM students to present 
+    	 their research to other students and experts in the field. This will be held on 
+    	     December 12th, 2018. 
+    	</h6>
+    </div>
+    <div class="row-3" style="margin-top: 20px;">
+      <div class="column-6 w-col w-col-6">
+         <div class="card-track" style="padding: 10px;">
+          <div class="row-12 w-row">
+          
+      <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif; text-transform: uppercase;">PhD colloquium for doctoral candidates</h4>
+      <li style="padding-left: 10px;">
+        The Colloquium committee will select approximately 25 participants who will be expected to participate in peer-review exercises, give short, informal presentations of their work during the Colloquium, and follow it up with extensive group discussion.
 
-            </li>
-            <li style="padding-left: 10px;">
-              Faculty members at institutions in India and abroad would be invited as discussants for each of the shortlisted papers. Each paper invited for full-fledged presentation would be assigned a discussant.
+      </li>
+      <li style="padding-left: 10px;">
+        Faculty members at institutions in India and abroad would be invited as discussants for each of the shortlisted papers. Each paper invited for full-fledged presentation would be assigned a discussant.
 
-            </li>
-            <li style="padding-left: 10px;">
-              The conference is designed to ensure focussed discussions among the doctoral student participants, faculty discussants and other academician invitees on each paper.
-            </li>
-            <br>
-            </div>
-              </div>
-            </div>
-            <div class="column-6 w-col w-col-6">
-              <div class="card-track" style="padding: 10px;">
-                <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif;">FUNDING</h4>
-              We are hoping to offer some financial support to doctoral colloquium participants. The details of this support will be announced in the future. Women participants are strongly encouraged to apply.
-              </div>
-            </div>
-            
+      </li>
+      <li style="padding-left: 10px;">
+        The conference is designed to ensure focussed discussions among the doctoral student participants, faculty discussants and other academician invitees on each paper.
+      </li>
+      <br>
+      </div>
+        </div>
+      </div>
+      <div class="column-6 w-col w-col-6">
+        <div class="card-track" style="padding: 10px;">
+          <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif;">FUNDING</h4>
+        We are hoping to offer some financial support to doctoral colloquium participants. The details of this support will be announced in the future. Women participants are strongly encouraged to apply.
+        </div>
+      </div>
+    </div>
+
+
+
+<div class="row-3">
+  <div class="jquery-script-ads">
+    <script type="text/javascript"><!--
+    google_ad_client = "ca-pub-2783044520727903";
+    /* jQuery_demo */
+    google_ad_slot = "2780937993";
+    google_ad_width = 728;
+    google_ad_height = 90;
+    //-->
+    </script>
+    <script type="text/javascript"
+    src="https://pagead2.googlesyndication.com/pagead/show_ads.js">
+    </script>
   </div>
-
+  <div class="jquery-script-clear"></div>
+<h4 class="heading-8" style="margin-top:100px">COLLOQIUM PROGRAMME SCHEDULE</h4>
+<div class="card-new">
+<main>
+      <section class="page-section">
+      <div class="container">
+      <div class="timeline">
+      <div class="timeline__wrap">
+      <div class="timeline__items">
+      <div class="timeline__item">
+      <div class="timeline__content">
+      <h2>09:30 - 10:30 a.m.</h2>
+      <p>REGISTRATION</p>
+      </div>
+      </div>
+      <div class="timeline__item">
+      <div class="timeline__content">
+      <h2>10:30 a.m - 12:15 pm</h2>
+      <p>
+      <li> Key note speech by Dr. Ambika Zutshi, Deaken University, Melbourne </li>
+      <li> Panel discussion on 'Revisiting research agenda for Sustainability: Options and Futures' </li></p>
+      </div>
+      </div>
+      <div class="timeline__item">
+      <div class="timeline__content">
+      <h2>12.30 - 1 pm</h2>
+      <p> POSTER PRESENTATION SESSION</p>
+      </div>
+      </div>
+      <div class="timeline__item">
+      <div class="timeline__content">
+      <h2>2.00 - 4.00 pm</h2>
+      <p>PAPER PRESENTATIONS</p>
+      </div>
+      </div>
+      <div class="timeline__item">
+      <div class="timeline__content">
+      <h2>4.15-4.45 pm</h2>
+      <p>Valedictory session</p>
+      </div>
+      </div>
+      </div>
+      </div>
+      </div>
+      </div>
+      </section>
+</main>
+</div>
+  <script type="text/javascript" src="../timeline.min.js"></script>
+  <script>
+  timeline(document.querySelectorAll('.timeline'), {
+  forceVerticalMode: 700,
+  mode: 'horizontal',
+  verticalStartPosition: 'left',
+  visibleItems: 4
+  });
+  </script>
+  <script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-36251023-1']);
+  _gaq.push(['_setDomainName', 'jqueryscript.net']);
+  _gaq.push(['_trackPageview']);
+  (function() {
+  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+  </script>
+</div>
 </div>
