--- a/app/views/home/details.html.erb
+++ b/app/views/home/details.html.erb
@@ -22,7 +22,7 @@
     </div>
     <div>
       <h6 class="heading-2" style="font-family: 'Roboto Condensed', sans-serif;">
-    	The half day Doctoral Colloquium will give opportunity to PhD/FPM students to present 
+    	The full day Doctoral Colloquium will give opportunity to PhD/FPM students to present 
     	 their research to other students and experts in the field. This will be held on 
     	     December 12th, 2018. 
     	</h6>
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div class="column-6 w-col w-col-6">
-        <div class="card-track" style="padding: 10px;">
+        <div class="card-track" style="padding: 10px; height: 243px;">
           <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif;">FUNDING</h4>
         We are hoping to offer some financial support to doctoral colloquium participants. The details of this support will be announced in the future. Women participants are strongly encouraged to apply.
         </div>
@@ -58,7 +58,7 @@
 
 
 
-<div class="row-3">
+<div class="row-3" style="margin-bottom: 50px;">
   <div class="jquery-script-ads">
     <script type="text/javascript"><!--
     google_ad_client = "ca-pub-2783044520727903";
@@ -73,8 +73,8 @@
     </script>
   </div>
   <div class="jquery-script-clear"></div>
-<h4 class="heading-8" style="margin-top:100px">COLLOQIUM PROGRAMME SCHEDULE</h4>
-<div class="card-new">
+<h4 class="heading-8" style="margin-top:100px; text-align: left;font-family: 'Roboto Condensed', sans-serif; "> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> COLLOQIUM PROGRAMME SCHEDULE : </p></h4>
+<div class="card-new" style="    box-shadow: 4px 4px 8px 4px rgba(0,0,0,0.2) !important; padding: 10px;">
 <main>
       <section class="page-section">
       <div class="container">
@@ -97,19 +97,19 @@
       </div>
       <div class="timeline__item">
       <div class="timeline__content">
-      <h2>12.30 - 1 pm</h2>
+      <h2>12:30 - 1:00 pm</h2>
       <p> POSTER PRESENTATION SESSION</p>
       </div>
       </div>
       <div class="timeline__item">
       <div class="timeline__content">
-      <h2>2.00 - 4.00 pm</h2>
+      <h2>2:00 - 4:00 pm</h2>
       <p>PAPER PRESENTATIONS</p>
       </div>
       </div>
       <div class="timeline__item">
       <div class="timeline__content">
-      <h2>4.15-4.45 pm</h2>
+      <h2>4:15 - 4:45 pm</h2>
       <p>Valedictory session</p>
       </div>
       </div>
@@ -126,7 +126,7 @@
   forceVerticalMode: 700,
   mode: 'horizontal',
   verticalStartPosition: 'left',
-  visibleItems: 4
+  visibleItems: 3
   });
   </script>
   <script type="text/javascript">
