--- a/public/webflow.css
+++ b/public/webflow.css
@@ -931,6 +931,12 @@ textarea.w-select {
     }
 }
 
+@media only screen and (min-width: 1600px) {
+    .w-slider {
+        height: 560px !important;
+    }
+}
+
 .w-slider {
   position: relative;
   height: 500px;
