--- a/app/views/home/details.html.erb
+++ b/app/views/home/details.html.erb
@@ -16,6 +16,12 @@
     </style>
 <%end%> 
 
+<% content_for :scripts do %>
+<script type="text/javascript">
+  window.onload = function() {};
+</script>
+<%end%>
+
 <div>
     <div class="heading-tittle color-black w-container" style="margin-top: 0px;">
       <h2 class="" style="margin: 30px 0px 30px 0px"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">Colloquium Details</p></h2>
@@ -66,11 +72,10 @@
     google_ad_slot = "2780937993";
     google_ad_width = 728;
     google_ad_height = 90;
+    
     //-->
     </script>
-    <script type="text/javascript"
-    src="https://pagead2.googlesyndication.com/pagead/show_ads.js">
-    </script>
+  
   </div>
   <div class="jquery-script-clear"></div>
 <h4 class="heading-8" style="margin-top:100px; text-align: left;font-family: 'Roboto Condensed', sans-serif; "> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> COLLOQIUM PROGRAMME SCHEDULE : </p></h4>
@@ -120,14 +125,15 @@
       </section>
 </main>
 </div>
-  <script type="text/javascript" src="../timeline.min.js"></script>
+  
   <script>
+    document.addEventListener("turbolinks:load", function() {
   timeline(document.querySelectorAll('.timeline'), {
   forceVerticalMode: 700,
   mode: 'horizontal',
   verticalStartPosition: 'left',
   visibleItems: 3
-  });
+  }); })
   </script>
   <script type="text/javascript">
   var _gaq = _gaq || [];
