--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
   <link href="../timeline.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="../webflow.js" type="text/javascript"></script>
+  <script type="text/javascript" src="../timeline.min.js"></script>
   <%= yield :styles %>
   <%= yield :scripts %>
   </head>
@@ -130,7 +133,8 @@
                 <div>Doctoral Colloquium</div>
               </div>
               <nav class="w-dropdown-list">
-                <a href="/details" class="dropdown-links w-dropdown-link">Colloquium Details</a>
+                <%= link_to "Colloquium Details", details_path, :class => "dropdown-links w-dropdown-link" %>
+                <!-- <a href="/details" class="dropdown-links w-dropdown-link">Colloquium Details</a> -->
                 <a href="/application" class="dropdown-links w-dropdown-link">Applications</a>
                 <%= link_to "Co-Chairs", cochair_path, :class => "dropdown-links w-dropdown-link" %>
               </nav>
@@ -191,8 +195,7 @@
 
 
 
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="../webflow.js" type="text/javascript"></script>
+
 
   </body>
 
