--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -116,3 +116,18 @@
 .card-track:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
+
+
+.card-detail {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 25%;
+    border-radius: 5px;
+}
+
+.card-detail:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+
+
