--- a/app/views/abstracts/new.html.erb
+++ b/app/views/abstracts/new.html.erb
@@ -177,7 +177,7 @@
     	<%= link_to new_user_registration_path,class:"btb" do%>
       <span> Register</span> 
       <%end%>&nbsp;
-     to upload abtract</h6>
+     to upload abstract</h6>
   </div>
 </div>
 <% end %>
