--- a/app/views/abstracts/show.html.erb
+++ b/app/views/abstracts/show.html.erb
@@ -137,7 +137,7 @@
     	<%= link_to "Log in", new_user_session_path,class:"btn btn-sm btn-danger btn-cons" %>
     	/
     	<%= link_to "Register", new_user_registration_path,class:"btn btn-sm btn-danger btn-cons" %>&nbsp;
-     to upload abtract</h6>
+     to upload abstract</h6>
   </div>
 </div>
 <% end %>
