--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -173,7 +173,7 @@
                 <div class="w-row">
                   <div class="column-3 w-col w-col-6">
                     <h6 class="heading-6" style="text-align: left !important; margin: 0px 0px 0px 10px; font-size: 14px;">Website URL, if any</h6>
-                    <%= f.text_field :website_url ,class: "form-control required w-input", id:"name-field",placeholder:"Website URL", :required => true, style:"margin-left:10px;"%>
+                    <%= f.text_field :website_url ,class: "form-control required w-input", id:"name-field",placeholder:"Website URL", :required => false, style:"margin-left:10px;"%>
                   </div>
                   <div class="column-3 w-col w-col-6">
                     <h6 class="heading-6" style="text-align: left !important; margin: 0px 0px 0px 10px; font-size: 14px;">Where did you hear about the conference?</h6>
