--- a/app/views/abstracts/show.html.erb
+++ b/app/views/abstracts/show.html.erb
@@ -107,7 +107,7 @@
               <div class="column-3 w-col w-col-5" style="display: inline-block;">
                 <h5 class="heading-6" style="font-family: 'Roboto Condensed', sans-serif;">
                 	Uploaded abstract:
-                	 <a class="btn" href="<%= current_user.abstract.abstract_url%>" target="blank" style="font-size: 16px;"> 	<%= current_user.abstract.title %> </a>
+                	 <a class="btn" href="<%= @uploaded_abstract.abstract_url%>" target="blank" style="font-size: 16px;"> 	<%= @uploaded_abstract.title %> </a>
                 </h5>
               </div>
               <div class="column-3 w-col w-col-7">
