--- a/app/views/home/dates.html.erb
+++ b/app/views/home/dates.html.erb
@@ -134,10 +134,10 @@ td.text-right {
       <div class="heading-tittle color-black  w-container " style="max-width: none !important;">
         
     <div>
-      <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider">
+      <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider" s>
         <div class="w-slider-mask">
-          <div class="slide-1 w-slide"></div>
-          <div class="slide-5 w-slide">
+          
+          <div class="slide-2 w-slide">
             <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 47%;  cursor: pointer; opacity: 0">
               
             </a>
