--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -188,7 +188,7 @@
 <div class="section-3">
       <div class="ticker-wrap">
       <div class="ticker">
-        <div class="ticker__item">ABSTRACT SUBMISSIONS DEADLINE : <p class="ticker__item " style="color: #e9385a; margin-left: 0pc;"> SEPTEMBER 30 </p> </div>
+        <div class="ticker__item">ABSTRACT SUBMISSIONS DEADLINE EXTENDED : <p class="ticker__item " style="color: #e9385a; margin-left: 0pc;"> 19TH OCTOBER, 2018 </p> </div>
       </div>
     </div>
     </div><%= render 'partials/flash' %>
