--- a/app/views/abstracts/new.html.erb
+++ b/app/views/abstracts/new.html.erb
@@ -12,37 +12,33 @@
           letter-spacing: 1px;
           font-family: 'Roboto Condensed', sans-serif;
      }
-          .button {
+     .button {
   border-radius: 4px;
-  background-color: #a9a9a9!important;
+  background-color: #3ec9cb !important;
   border: none;
-  color: #000;
+  color: #FFFFFF;
   text-align: center;
-  font-size: 15px;
-  padding: 8px 5px 8px 5px;
-  /*width: 20px;*/
+  font-size: 18px;
+  padding: 10px;
+  width: 200px;
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
-  font-family: 'Roboto Condensed', sans-serif;
 }
 
-
-          .btb {
-  border-radius: 4px;
-  background-color: #a9a9a9 !important;
+.btn {
+    border-radius: 2px;
+  background-color: #0095ff !important;
   border: none;
-  color: #000;
+  color: #FFFFFF;
   text-align: center;
-  font-size: 15px;
-  padding: 8px 5px 8px 5px;
-  /*width: 20px;*/
+  font-size: 16px;
+  padding: 8px;
+  /*width: 200px;*/
   transition: all 0.5s;
   cursor: pointer;
-  margin: 5px;
-  font-family: 'Roboto Condensed', sans-serif;
+  margin: 2px;
 }
-
 .button span {
   cursor: pointer;
   display: inline-block;
@@ -64,32 +60,6 @@
 }
 
 .button:hover span:after {
-  opacity: 1;
-  right: 0;
-}
-
-
-.btb span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-
-.btb span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
-
-.btb:hover span {
-  padding-right: 25px;
-}
-
-.btb:hover span:after {
   opacity: 1;
   right: 0;
 }
@@ -123,25 +93,46 @@
       <div class="w-container"></div>
     </div>
     <div class="heading-tittle color-black w-container">
-    <h2 class="heading-5">Upload Abstract</h2>
+    <h2 class="" style="margin-top: 30px; margin-bottom: 30px;"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">Upload Abstract</p></h2>
     </div>
-    <h6 class="heading-5" style="font-family: 'Roboto Condensed', sans-serif;">(Name of the file should be studentname_abstract-track)</h6>
-    <div class="div-block-4">
-      <div>
+    <h6 class="heading-5" style="font-family: 'Roboto Condensed', sans-serif;"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a; display: inline; font-size: 18px;">Name of the file :</p>  &nbsp; <p style="display: inline; font-size: 16px;">< First Name Last Name_Track Name > </p> </h6>
+<%= form_for  abstracts_path, enctype: 'multipart/form-data' do %>
+    <div class="card-track">
+      <div class="column-6 w-col w-col-6" style="padding-top: 20px; ">
+                <h6 class="heading-6" style="text-align: right !important; margin: 0px 0px 0px 10px; font-size: 15px;font-family: 'Roboto Condensed', sans-serif;">Select from the track chairs the most closest topic related to your abstract:</h6>
+              </div>
+              <div class="column-6 w-col w-col-6" style="padding-top: 20px; ">
+              <%= select_tag "category", options_for_select([ "List of tracks","Asian Way of Thinking: Integrating Local Diversities in Management Education", "Building Inclusive Markets", "Business Initiatives for Sustainable Development", "Engaging with SDGs - The Local Experiences", "Extreme Events, Disasters and Building Resilience", "Global Peace and Education","Inequality : The Role for Businesses","Innovating on Pedagogy and Curriculum", "Management Education for Future","Re-thinking CSR","Social Entrepreneurship","Social Impact Investing","Sustainability and Development","Sustainable Businesses","Sustainable Cities"]) , :style => "margin-left: 10px;"%>
+              </div>
+              <div class="column-6 w-col w-col-6">
+                <h6 class="heading-6" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif; text-align: right; margin-top: 10px;">
+                    Upload abstract:</h6>
+              </div>
+              <div class="column-6 w-col w-col-6">
+                <%= file_field_tag :file , :style => " margin-top: 10px; margin-left:10px;"  %>
+              </div>
         <div class="w-row heading-5">
           <% if current_user.abstract.present?%>
               <h6 class="heading-5"><%= @uploaded_abstract.title %></h6>
-              <%= link_to 'Delete', controller: 'abstracts', action: 'destroy', id: @uploaded_abstract.id, method: :delete %>
+              
 
           <% elsif %>
-              <%= form_tag abstracts_path, enctype: 'multipart/form-data' do %>
-                <%= file_field_tag :file  %>
-                <%= submit_tag 'Upload file' %>
+              
+                
+                
+
               <% end %>
-     <% end %>
         </div>
-      </div>
+      
     </div>
+    <div class="w-row heading-5" style="margin-top: 20px;">
+                  
+              <%= button_tag(type: "submit", class: "button") do %>
+                   <span class="">Update File</span>
+              <% end %>
+          </div>
+     <% end %>
+
   </div>
 </div>
 
