--- a/app/views/home/cochair.html.erb
+++ b/app/views/home/cochair.html.erb
@@ -27,7 +27,8 @@
               <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Sandip Anand</h4>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Founding Associate Dean
               </h5>
-              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Xavier University Bhubaneswar</h5>
+              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Doctoral Programs</h5>
+              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Xavier University Bubaneswar</h5>
             </div>
           </div>
         </div>
